<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">GitU</string>

    <!--tab layout-->
    <string name="tab_text_1">Following</string>
    <string name="tab_text_2">Followers</string>

    <string name="no_followers">Tidak ada followers</string>
    <string name="no_following">Tidak ada following</string>
    <string name="text_following">Following</string>
    <string name="text_repository">Repository</string>
    <string name="text_followers">Follower</string>
    <string name="credit">By Johannes</string>
    <string name="see_full">Lihat selengkapnya</string>
    <string name="desc_main">Gunakan fitur pencarian user dibawah ini ya!</string>
    <string name="name">Johannes Christian</string>
    <string name="hello">Halo, </string>
    <string name="user_removed">%1$s telah dihapus dari daftar favorite</string>
    <string name="reminder_on">Pengingat nyala</string>
    <string name="reminder_off">Pengingat mati</string>
    <string name="title_notification">Cari Pengguna Github</string>
    <string name="description_notification">Ayo temukan user githubmu!</string>
    <string name="sub_title_notification">GitU</string>
    <string name="Love">Suka</string>
    <string name="list">List </string>
    <string name="favorite_user">Favorite User</string>
    <string name="check_dibawah_untuk_user_yang_telah_kamu_favoritkan">Check dibawah untuk user yang telah kamu favoritkan</string>
    <string name="your_reminder">Pengingat Kamu</string>
    <string name="everyday">Setiap Hari</string>
    <string name="_09_00">09 : 00</string>
    <string name="am">AM</string>
    <string name="task_open_gitu_app">Task : Buka GitU App</string>
    <string name="reminder">Reminder</string>
    <string name="language">Language</string>
</resources>