<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLighter"
    tools:context=".ui.ReminderActivity">

    <View
        android:id="@+id/v_toolbar"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_back_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_to_normal"
        android:layout_marginTop="30dp"
        android:background="@color/colorTransparent"
        android:padding="7dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_logo_reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/small_to_normal"
        android:src="@drawable/bg_home"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_to_normal"
        android:layout_marginTop="@dimen/normal_to_large"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/your_reminder"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/v_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/small_to_normal"
        android:layout_marginTop="@dimen/small_to_normal"
        android:background="@drawable/ic_bg_reminder_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_alarm">

        <ImageView
            android:id="@+id/iv_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/small_to_normal"
            android:src="@drawable/ic_circle_reminder"
            app:layout_constraintBottom_toBottomOf="@id/tv_everyday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_everyday"
            app:layout_constraintVertical_bias="1.4" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_everyday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_to_small"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/everyday"
            android:textColor="@color/colorGrayscaleDark"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toEndOf="@id/iv_circle"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/_09_00"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="46sp"
            app:layout_constraintStart_toStartOf="@id/tv_everyday"
            app:layout_constraintTop_toBottomOf="@id/tv_everyday" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_to_small"
            android:text="@string/am"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="26sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_time"
            app:layout_constraintStart_toEndOf="@id/tv_time"
            app:layout_constraintTop_toTopOf="@id/tv_time"
            app:layout_constraintVertical_bias="1" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_to_normal"
            android:layout_marginBottom="@dimen/small_to_normal"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/task_open_gitu_app"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_large"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/tv_everyday"
            app:layout_constraintTop_toBottomOf="@id/tv_time" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:padding="10dp"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>