<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrayLighter"
    android:fillViewport="true"
    tools:context=".ui.FavoriteActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_bg_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_component"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btn_back_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="30dp"
            android:background="@color/colorTransparent"
            android:padding="7dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_logo_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="@dimen/small_to_normal"
            android:src="@drawable/bg_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_greet_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="40dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/list"
            android:textColor="@color/colorBlack"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_fav" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_fav_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_medium"
            android:text="@string/favorite_user"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_greet_fav"
            app:layout_constraintStart_toEndOf="@id/tv_greet_fav"
            app:layout_constraintTop_toTopOf="@+id/tv_greet_fav" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_help_fav"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_to_normal"
            android:layout_marginTop="@dimen/very_small_to_small"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/check_dibawah_untuk_user_yang_telah_kamu_favoritkan"
            android:textSize="@dimen/text_normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_fav_fav" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_git_user_fav"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/small_to_normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_bg_fav"
            tools:listitem="@layout/item_favorite_user" />

        <ProgressBar
            android:id="@+id/pb_fav"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/normal_to_large"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_logo_fav" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>