<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".ui.DetailGitUserActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:backgroundTint="@color/colorTransparent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/container_upper_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_logo_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="@dimen/small_to_normal"
                    android:src="@drawable/bg_home"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/v_line_detail_git"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/normal_to_large"
                    android:background="@color/colorGrayscaleLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_logo_detail" />

                <ProgressBar
                    android:id="@+id/pb_detail"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginTop="29dp"
                    android:layout_marginEnd="@dimen/small_to_normal"
                    android:indeterminateTint="@color/colorPrimary"
                    android:visibility="gone"
                    app:layout_constraintEnd_toStartOf="@id/iv_logo_detail"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/cv_profile_detail_git"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="@dimen/small_to_normal"
                    android:layout_marginTop="@dimen/small_to_normal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_line_detail_git"
                    tools:src="@drawable/default_photo" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_name_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_to_normal"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/rubik_medium"
                    android:textColor="@color/colorBlackNormal"
                    android:textSize="20sp"
                    app:layout_constraintStart_toEndOf="@id/cv_profile_detail_git"
                    app:layout_constraintTop_toBottomOf="@id/v_line_detail_git"
                    tools:text="Sabila Rafani Aliandra" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_username_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_to_normal"
                    android:layout_marginTop="@dimen/small"
                    android:background="@drawable/bg_rect_rad_8_secondary"
                    android:fontFamily="@font/rubik_medium"
                    android:paddingHorizontal="6dp"
                    android:paddingVertical="4dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintStart_toEndOf="@id/cv_profile_detail_git"
                    app:layout_constraintTop_toBottomOf="@id/tv_name_detail_git"
                    tools:text="\@rafaaliandra" />

                <View
                    android:id="@+id/v_line_under_place_detail_git"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/small_to_normal"
                    android:background="@color/colorGrayscaleLight"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_profile_detail_git" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_following_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/normal"
                    android:layout_marginTop="@dimen/small_to_normal"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/text_following"
                    android:textColor="@color/colorBlackNormal"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_line_under_place_detail_git" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_repo_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_to_normal"
                    android:layout_marginEnd="@dimen/normal"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/text_repository"
                    android:textColor="@color/colorBlackNormal"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_line_under_place_detail_git" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_follower_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_to_normal"
                    android:fontFamily="@font/rubik_regular"
                    android:text="@string/text_followers"
                    android:textColor="@color/colorBlackNormal"
                    android:textSize="@dimen/text_large"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/v_line_under_place_detail_git" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_following_count_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_to_normal"
                    android:layout_marginTop="@dimen/small"
                    android:background="@drawable/bg_rect_rad_3_primary_light"
                    android:fontFamily="@font/rubik_medium"
                    android:paddingHorizontal="@dimen/large"
                    android:paddingVertical="@dimen/very_small"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_huge"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_following_detail_git"
                    tools:text="122" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_follower_count_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:background="@drawable/bg_rect_rad_3_primary_light"
                    android:fontFamily="@font/rubik_medium"
                    android:paddingHorizontal="@dimen/large"
                    android:paddingVertical="@dimen/very_small"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_huge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_follower_detail_git"
                    tools:text="122" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tv_repo_count_detail_git"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:layout_marginEnd="@dimen/small_to_normal"
                    android:background="@drawable/bg_rect_rad_3_primary_light"
                    android:fontFamily="@font/rubik_medium"
                    android:paddingHorizontal="@dimen/large"
                    android:paddingVertical="@dimen/very_small"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/text_huge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_repo_detail_git"
                    tools:text="122" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:layout_gravity="bottom"
                app:tabSelectedTextColor="@color/colorPrimaryDark"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                app:tabTextColor="@color/colorGrayDarker" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorTransparent"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/Love"
        android:letterSpacing="0"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:layout_gravity="bottom|end"
        app:icon="@drawable/ic_love"
        android:visibility="visible"
        app:iconTint="@color/colorWhite"
        android:backgroundTint="#ffb2b2" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
